CSS added to the form

--- a/iindex.html
+++ b/iindex.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>form-responsive</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="signup-form">
@@ -38,6 +39,5 @@
             <button type="submit">Sign Up</button>
         </form>
     </div>
-    
 </body>
 </html>
